# Railgate-Automation-

railgate/: package.xml  setup.cfg  setup.py
railgate/railgate/: sim_web_ui.py  web_ui.py
railgate/railgate/templates/: index.html
