<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>railgate</name>
  <version>0.1.0</version>
  <description>Web UI for a level-crossing railgate system. Subscribes to mobile train GPS/IMU and publishes crossing status (safe/incoming/passing).</description>
  <maintainer email="jarifborno@gmail.com">tamim</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>python3-flask</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
